2004-02-29  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/filter.c (main): Skip the sharp-bang line of the first file.

2004-02-23  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.c (escm_preproc): Most lines were counted twice.

2004-02-20  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/langconf.c: Replaced lang.awk with a C program.

	* src/lang.awk: Removed.

	* src/cmdline.h: Was part of misc.h.

	* src/fork.h: Was part of misc.h.

	* src/filter.c (main): Fixed a bug on meta-arguments.

	* src/cmdline.c (parse_shebang): Added this function to replace it
	with functions in meta_argc.c.

	* src/Makefile.am: Removed meta_argc.[ch].

	* src/meta_arg.c: Removed.

	* src/meta_arg.h: Removed.

2004-02-17  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/cmdline.c: Moved some functions from misc.c.

	* src/fork.c (escm_redirect): Moved this function from src/misc.c.

2004-02-14  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/filter.c (main): Fixed a bug on *escm-input-file*.
	(main): Check the return value of parse_lang().

2004-02-12  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/filter.c (main): Removed some options.

	* src/meta_arg.c (meta_expand): Removed a hook for handler CGIs.

2004-02-11  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/filter.c (main): Fixed a typo.
	(main): Fixed a bug on getopt().

2004-02-03  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	* src/escm.c (escm_bind_query_string): Escape \" in QUERY_STRING
	though it may not appear.
	
	* doc/Makefile.am: Works both with GNU make and BSD make.

	* src/escm.h (escm_lang): Added newline field.
	
	* Removed code on formatted output.

	* Removed code on i18n.
	
2003-07-28  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* doc/2aescm.epod: Added the manpage of 2aescm.

	* doc/*.escm, doc/aescm.epod: Updated.

2003-07-26  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/classic.c, src/Makefile.am: Added a tool (2aescm) to convert
	the original escm format into the XML format.

	* src/Makefile.am (DEFS): Use DEFS instead of AM_CFLAGS.
